@@ -4,6 +4,8 @@ Changelog
 1.8.2 (unreleased)
 ------------------
 
+- Reliably remove users from VMs (#20092)
+
 - Ignore NixOS VMs in nagios consistency check (#19851)
 
 1.8.1 (2016-01-20)
